src/core/generator/json/snapshots/tailcall__core__generator__json__query_generator__test__list_json_query_generator.snap
---
source: src/core/generator/json/query_generator.rs
expression: config.to_sdl()
---
type Query {
  f1: [T1] @http(path: "/path")
}
