src/core/generator/json/snapshots/tailcall__core__generator__json__query_generator__test__query_generator_with_path_variables.snap
---
source: src/core/generator/json/query_generator.rs
expression: config.to_sdl()
---
type Query {
  f1(p1: Int!): T1 @http(path: "/users/{{.args.p1}}")
}
