src/core/generator/json/snapshots/tailcall__core__generator__json__query_generator__test__query_generator_with_query_params.snap
---
source: src/core/generator/json/query_generator.rs
expression: config.to_sdl()
---
type Query {
  f1(is_verified: Boolean, q: Int): T1 @http(path: "/path", query: [{key: "q", value: "{{.args.q}}"}, {key: "is_verified", value: "{{.args.isVerified}}"}])
}
